--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.min.js"></script>
   <script src="p5/p5.js"></script>
   <script src="p5/addons/p5.dom.js"></script>
-  <script src="js/sketch2.js"></script>
+  <script src="sketch.js"></script>
 
 </head>
 
